# time-func

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  time_utils.py
.github/workflows/: release.yml  test.yml
_utils/: newtypes.py
tests/: test_timeout.py
timeout/: __init__.py
